--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cli-progress": "^3.11.2",
     "date-fns": "^2.29.3",
     "jimp": "^0.16.2",
+    "pdf-parse": "^1.1.1",
     "prompt": "^1.3.0",
     "tesseract.js": "^3.0.3"
   }
