--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "cli-progress": "^3.11.2",
     "date-fns": "^2.29.3",
+    "fs-extra": "^10.1.0",
     "jimp": "^0.16.2",
+    "jszip": "^3.10.1",
+    "pdf-img-convert": "^1.2.1",
     "pdf-parse": "^1.1.1",
     "prompt": "^1.3.0",
     "tesseract.js": "^3.0.3"
