--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "cli-progress": "^3.11.2",
+    "copy-paste": "^1.5.3",
+    "csv": "^6.2.8",
     "date-fns": "^2.29.3",
     "fs-extra": "^10.1.0",
     "jszip": "^3.10.1",
